--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "fzaninotto/faker": "^1.4",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
